--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<input class="optionalexpenses-item" type="text" id="optionalexpenses_3">
             <button class="optionalexpenses-btn">Утвердить</button>
             
-            <div class="count-budget">Расчет дневного бюджета</div>
+            <div class="count-budget">Расчет дневного бюджета </br> (рассчитывается в самом конце)</div>
             <button class="count-budget-btn">Рассчитать</button>
             
             <div class="choose-income-label">Введите статьи возможного дохода через запятую</div>
